# Team8097-2018

FtcRobotController/: build.gradle
FtcRobotController/src/main/java/org/firstinspires/ftc/robotcontroller/internal/: FtcRobotControllerActivity.java
FtcRobotController/src/main/res/layout/: activity_ftc_controller.xml
TeamCode/: build.gradle
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/: Autonomous.java  AutonomousNew.java  BaseOpMode.java  BaseOpModeNew.java  BaseOpModeTest.java  BasicOpMode_Linear.java  BlueAutonomous.java  BlueAutonomousLong.java  CalibrateIMU.java  ColorBlobDetector.java  CsvReader.java  DistanceCalibration.java  GlyphPoseDetector.java  GodOpMode.java  Mesh.java  Model.java  PnPProblem.java  Practice_BasicOpMode_Linear.java  RedAutonomous.java  RedAutonomousLong.java  RobustMatcher.java  ServoCallibration.java  TeleOpMode.java  TeleOpModeNew.java  TestAutonomous.java  TestAutonomous2.java  Utils.java  Vuforia.java  readme.md
TeamCode/src/main/java/org/firstinspires/ftc/teamcode/poseDetection/: CsvReader.java  Mesh.java  Model.java  PnPProblem.java  RobustMatcher.java  Utils.java
TeamCode/src/main/jniLibs/poseDetect/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/src/main/java/org/opencv/features2d/: DescriptorExtractor.java  DescriptorMatcher.java  FeatureDetector.java
